2012-04-29 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefile remove old GNUSTEP_INSTALLATION_DIR
2012-04-29 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	Take patches from Debian, from Yavor Doganov  <yavor@gnu.org>
	Forwarded from Philippe Roussel, to fixFTBFS and adopt
	to the slightly changed avifile API.
        * Bundles/WindowsMedia.CWMFile.h (WMStreamReadFrames): Typo fix.
        * Bundles/WindowsMedia/CWMFile.cpp: Include <infotypes.h>.
        (WMFileAudioStreamCount, WMStreamGetFrameSize): Cast the
        result to unsigned int.
        (WMStreamReadFrames) <_samplesRead, _bytesRead>: Declare of
        type size_t.  Amend the call to readStream->ReadFrames
        accordingly.
2012-04-26 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/OSS/GNUmakefile.preamble
	  only link against libossaudio on OpenBSD
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefile.preamble use pkg-config to find the goom libraries
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Add the Sndio Output Bundle, still work in progress
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/Esound/EsoundPreference.m include NSDictionary.h
	* CynthiuneController.m do not include nonexisting header
	* CynthiuneAnimatedImageView.m, CynthiunePauseButton.m,
	  CynthiuneSongTitleCell.m add [super dealloc]
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Frameworks/Cynthiune/GNUmakefile.preamble diable mcheck
	* Frameworks/Cynthiune/NSCellExtensions.m include NSFoundation.h
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SongInspectorController.m disable LibMusicBrainz for now
	* GNUmakefile, GNUmakefile.preamble disable mcheck, and 
	  libmusicbrainz, and add Sndio bundle if statement
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* PlaylistController.m fix opening open Panel