@@ -66,7 +66,10 @@ ogg support:
 - libvorbis 1.0.1 and libogg 1.1.0
   (http://www.vorbis.com/download_unix_1.0.1.psp)
 musepack support:
-- libmpcdec 1.2 (http://www.musepack.net/index.php?pg=src)
+- libmpcdec 1.3, newer API, chosen as the default
+- libmpcdec 1.2.X (http://www.musepack.net/index.php?pg=src)
+  via setting ADDITIONAL_OBJCFLAGS=-DMUSEPACK_API_126
+  as make environment, i.e. ADDITIONAL_OBJCFLAGS=-DMUSEPACK_API_126 gmake install
 mod, xm and all the possible tracker formats out there:
 - libmodplug 2.04 (http://modplug-xmms.sourceforge.net)
 wav, au and many uncompressed sound formats:
